--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>LaunchDarkly DuckHunt - Kiosk</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="/css/core.css" rel="stylesheet" />
+    <script src="/js/ldclient.min.js"></script>
     <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
     <script src="/js/core.js" type="module"></script>
     <script src="/js/index.js" type="module"></script>
