--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>LaunchDarkly DuckHunt - Kiosk</title>
+    <title>LaunchDuckly - Kiosk</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="/css/core.css" rel="stylesheet" />
     <script src="/js/ldclient.min.js"></script>
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+    <div id="gameCoverContainer" class="container gradientBG">
+        <img id="coverImage" src="/img/cover.png" />
+    </div>
     <div id="titleContainer" class="container">
         <div id="title">
             <img id="titleImage" src="/img/title.png" />
