--- a/public/player.html
+++ b/public/player.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>LaunchDarkly DuckHunt - Player</title>
+    <title>LaunchDuckly - Player</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="/css/core.css" rel="stylesheet" />
     <script src="/js/ldclient.min.js"></script>
