--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="/css/core.css" rel="stylesheet" />
     <script src="/js/ldclient.min.js"></script>
-    <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
+    <script src="/js/ably.min-1.js"></script>
     <script src="/js/core.js" type="module"></script>
     <script src="/js/index.js" type="module"></script>
     <script src="/js/qrcode.js"></script>
