--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     <div id="gameCoverContainer" class="container gradientBG">
         <img id="coverImage" src="/img/cover.png" />
     </div>
+    <div id="loadingContainer" class="container">
+        <div id="loadingMessage">LOADING</div>
+    </div>
     <div id="titleContainer" class="container">
         <div id="title">
             <img id="titleImage" src="/img/title.png" />
