Added game summary

--- a/public/player.html
+++ b/public/player.html
@@ -28,6 +28,20 @@
             <img id="titleImage" src="/img/title.png" />
         </div>
     </div>
+    <div id="gameSummaryContainer" class="container">
+        <div id="gameSummary">
+            <div>
+                <div>
+                    <div id="gameSummaryTitle">SUMMARY</div>
+                    <div id="gameSummaryStats">
+                        <div>SHOTS FIRED...<span id="gameSummaryShotsFired"></span></div>
+                        <div>NUMBER OF HITS...<span id="gameSummaryHits"></span></div>
+                        <div>HIT-MISS RATIO...<span id="gameSummaryHitMissRatio"><span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="messageContainer" class="container">
         <div id="messageBackground" class="container"></div>
         <div id="messageText"></div>
