--- a/public/player.html
+++ b/public/player.html
@@ -34,6 +34,7 @@
                 <div>
                     <div id="gameSummaryTitle">SUMMARY</div>
                     <div id="gameSummaryStats">
+                        <div><span id="gameSummaryPlayerName"><span></div>
                         <div>SCORE...<span id="gameSummaryScore"></span></div>
                         <div>SHOTS FIRED...<span id="gameSummaryShotsFired"></span></div>
                         <div>NUMBER OF HITS...<span id="gameSummaryHits"></span></div>
